fix spacing on project descriptions

--- a/profile-website/projects.css
+++ b/profile-website/projects.css
@@ -30,7 +30,8 @@ iframe {
 }
 p{
     font-size: 20px;
-    margin: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 #links{
     font-size: 24px;
